contact address dark mode fix (#134)

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -4239,6 +4239,10 @@ body.removeScroll::-webkit-scrollbar {
 		hue-rotate(0deg);
 }
 
+.dark-mode .addressSection p {
+	color: #ffffff;
+}
+
 .newsListSection .newsBtns {
 	display: flex;
 	justify-content: flex-end;
